--- a/style.css
+++ b/style.css
@@ -1,17 +1,28 @@
 @charset "UTF-8";
 
 :root {
-    font-variant: var();
+    --green: #24725f;
+    --gray: #E0E1E0;
+    --white: #ffffff;
+    --ice-gray: #f1f1f1;
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: var();
+}
+
+body {
+    line-height: 1.4;
+    background-color: var(--white);
+    overflow-x: hidden;
 }
 
 header {
-    background-color: #24725f;
-    padding: 45px;
+    background-color: var(--green);
+    padding: 24px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -23,13 +34,15 @@ header ul {
 
 header ul li {
     list-style: none;
+    text-align: center;
+    align-items: center;
 }
 
 header ul li a {
     position: relative;
     text-decoration: none;
     font-size: 1em;
-    color: white;
+    color: var(--ice-gray);
     text-transform: uppercase;
     letter-spacing: 0.2em;
 }
@@ -40,16 +53,69 @@ header ul li a::before {
     bottom: -2px;
     width: 100%;
     height: 2px;
-    background: gray;
+    background: var(--gray);
     transform: scaleX(0);
     transition: transform 0.5s ease-in-out;
-    transform-origin: right;
+    transform-origin: center;
 }
 
 header ul li a:hover::before {
     transform: scaleX(1);
     transform-origin: left;
 }
-body{
-    font-size: 16pt;
+
+
+h1 {
+    color: var(--green);
+    margin-top: 30px;
+}
+
+h2 {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    text-align: center;
+    width: 60%;
+    margin: 10px auto 40px auto;
+    font-weight: 300;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.2rem 5rem;
+
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo h1 {
+    color: #fff;
+}
+
+.nav-list {
+    display: flex;
+    align-items: center;
+}
+
+.nav-list ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.nav-item {
+    padding: 0 15px;
+}
+
+.nav-link {
+    text-decoration: none;
+    font-size: 1.25rem;
+    color: #fff;
+    font-weight: 400;
 }
