--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body {
     line-height: 1.4;
     background-color: rgb(249, 250, 238);
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 header {
@@ -124,57 +127,109 @@ p {
     font-weight: 400;
 }
 
-.Conteúdo {
-    text-align: center;
-}
+/* Carrossel */
 
-/* carosel */
-
-.carousel {
+.carrossel {
     width: 100%;
     height: 400px;
-    position: relative;
-  }
-  
-  .slides {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-  }
-  
-  .slide {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: none;
-  }
-  
-  .slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .navigation {
-    width: 100%;
-    height: 50px;
-    position: absolute;
-    bottom: 0;
     display: flex;
     justify-content: center;
-  }
-  
-  .navigation label {
-    width: 20px;
-    height: 20px;
-    background-color: #ccc;
-    border-radius: 50%;
-    margin: 10px;
+    align-items: center;
+    overflow: hidden;
+    overflow-x: scroll;
+}
+
+.carrossel::-webkit-scrollbar {
+    display: none;
+}
+
+.carrossel .imagem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    background-image: url(./img/carrossel/1.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: 0.5s;
+}
+
+/* Recentes */
+
+.recentes {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px 0;
+}
+
+.recentes h2 {
+    color: #24725f;
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+}
+
+.recentes .itens {
+    display: flex;
+    gap: 20px;
+    width: 90%;
+    height: 600px;
+    overflow: hidden;
+    overflow-x: scroll;
+}
+
+.recentes .itens::-webkit-scrollbar {
+    display: none;
+}
+
+.recentes .itens .item {
+    width: 300px;
+    background-color: #fff;
+    transition: 0.5s;
     cursor: pointer;
-  }
-  
-  #slide1:checked ~ .slides .slide:nth-child(1),
-  #slide2:checked ~ .slides .slide:nth-child(2),
-  #slide3:checked ~ .slides .slide:nth-child(3) {
-    display: block;
-  }
+}
+
+.recentes .itens .item:hover {
+    transform: translateY(20px);
+}
+
+.recentes .itens .recentesActive {
+    transform: translateY(20px)
+}
+
+.recentes .itens .item img {
+    width: 300px;
+    height: 500px;
+    object-fit: cover;
+}
+
+.recentes .navegation {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    padding: 0 20px;
+}
+
+.recentes .navegation span {
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
