--- a/global/header.css
+++ b/global/header.css
@@ -2,12 +2,21 @@ header {
     background-color: var(--wheat);
     padding: 0;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 header ul {
     position: relative;
     display: flex;
-    gap: 10px;
+    gap: 20px;
+    padding: 10px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 header ul li {
@@ -40,59 +49,16 @@ header ul li a:hover::before {
     transform-origin: left;
 }
 
-
-h1 {
-    color: rgb(0, 61, 0);
-    margin-top: 30px;
-}
-
-h2 {
-    color: black;
-    text-decoration: none;
-    font-size: 12pt;
-    padding: 20px 400px 0px;
-}
-
-p {
-    text-align: center;
-    width: 60%;
-    margin: 10px auto 40px auto;
-    font-weight: 300;
-}
-
-.nav-bar {
-    display: flex;
-    justify-content: space-between;
-    padding: 1.5rem 30rem;
-}
-
 .logo {
     display: flex;
     align-items: center;
+    width: 100px;
+    height: 100px;
 }
 
-.logo h1 {
-    color: #fff;
+.logo img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
 }
 
-.nav-list {
-    display: flex;
-    align-items: center;
-}
-
-.nav-list ul {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-}
-
-.nav-item {
-    margin: 0 15px;
-}
-
-.nav-link {
-    text-decoration: none;
-    font-size: 14pt;
-    color: #ffffe5;
-    font-weight: 400;
-}
